# fdate

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: push.yaml  unit_testing.yaml
cmake/: ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  dependencies.cmake
src/: CMakeLists.txt  DateTime.hpp  TimeDelta.hpp  TimeSpan.hpp  datetime.F90  datetime.hpp  datetime_wrapper.cpp
tests/: CMakeLists.txt
tests/cxx/: TEST_cxx_datetime.cpp  cxx_python_fuzz_wrapper.py  cxx_test_interface.cpp
tests/fortran/: TEST_ftn_datetime.F90  ftn_test_interface.F90
tests/fuzz/: TEST_cxx_fuzz.cpp
tests/python/: python_fuzz_wrapper.py
